--- a/themes/default/layouts/base.html
+++ b/themes/default/layouts/base.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+<title>{{index .options "title"}}</title>
+{{if index .options "favicon_url"}}<link rel="icon" href="{{index .options "favicon_url"}}">{{end}}
+{{if index .options "keywords"}}<meta name="keywords" content="{{index .options "keywords"}}">{{end}}
+{{if index .options "description"}}<meta name="description" content="{{index .options "description"}}">{{end}}
 <link rel="stylesheet" href="/static/css/all.css" type="text/css" />
 </head>
 <body>
