--- a/themes/default/layouts/base.html
+++ b/themes/default/layouts/base.html
@@ -9,9 +9,19 @@
 <link rel="stylesheet" href="/static/css/all.css" type="text/css" />
 </head>
 <body>
+    <nav id="nav">
+        <ul>
+            <li><a href="/">首页</a></li><li><a href="/archive">归档</a></li>
+        </ul>
+    </nav>
     <div id="main">
         {{template "content" .}}
     </div>
+{{/*    <footer id="footer">*/}}
+{{/*        {{if index .options "runday"}}*/}}
+{{/*            Has been running {{index .options "runday"}} days.*/}}
+{{/*        {{end}}*/}}
+{{/*    </footer>*/}}
     <script src="/static/js/main.js"></script>
 </body>
 </html>
