--- a/themes/default/res/css/custom.css
+++ b/themes/default/res/css/custom.css
@@ -25,8 +25,7 @@ pre .name {
         position: fixed;
         right: 100px;
         border-left: 1px solid #CCC;
-        height: 100%;
-        top: 0;
+        top: 90px;
     }
 }
 
@@ -123,4 +122,47 @@ article blockquote {
 
 article h1.title {
     margin-top: 10px;
+}
+
+
+/**/
+#nav {
+    margin-bottom: 40px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .06), 0 3px 1px -2px rgba(0, 0, 0, .1), 0 1px 5px 0 rgba(0, 0, 0, .06);
+}
+
+#nav ul {
+    margin: 0;
+}
+#nav ul li {
+    text-align: center;
+    line-height: 50px;
+    width: 100px;
+    display: inline-block;
+    border-right: 1px solid #f5f0f0b0;
+}
+#nav ul li:last-child {
+    border: none;
+}
+#nav ul li a{
+    display: block;
+    cursor: pointer;
+    transition: all .3s;
+}
+#nav ul li a:hover {
+    background-color: #f3eded6e;
+}
+
+#footer {
+    color: #CCC;
+}
+
+@media screen and (max-width: 768px) {
+    #nav {
+        margin-bottom: 20px;
+    }
+    #main {
+        padding-top: 0;
+        padding-bottom: 20px;
+    }
 }
