remove nav because i need simple, remove some font-family

--- a/themes/default/layouts/base.html
+++ b/themes/default/layouts/base.html
@@ -9,11 +9,11 @@
 <link rel="stylesheet" href="/static/css/all.css" type="text/css" />
 </head>
 <body>
-    <nav id="nav">
-        <ul>
-            <li><a href="/">首页</a></li><li><a href="/archive">归档</a></li>
-        </ul>
-    </nav>
+{{/*    <nav id="nav">*/}}
+{{/*        <ul>*/}}
+{{/*            <li><a href="/">首页</a></li><li><a href="/archive">归档</a></li>*/}}
+{{/*        </ul>*/}}
+{{/*    </nav>*/}}
     <div id="main">
         {{template "content" .}}
     </div>
