--- a/themes/default/includes/post.html
+++ b/themes/default/includes/post.html
@@ -42,7 +42,7 @@
                 {{ if .themeConfig.cc }}
                     <p>{{.themeConfig.cc}}</p>
                 {{end}}
-                <p class="archive-link"><a href="/archive">查阅归档</a></p>
+                <p class="archive-link"><a href="/archives">查阅归档</a></p>
             </div>
         </article>
     </section>
