--- a/themes/default/layouts/base.html
+++ b/themes/default/layouts/base.html
@@ -6,7 +6,7 @@
 {{if index .options "favicon_url"}}<link rel="icon" href="{{index .options "favicon_url"}}">{{end}}
 {{if index .options "keywords"}}<meta name="keywords" content="{{index .options "keywords"}}">{{end}}
 {{if index .options "description"}}<meta name="description" content="{{index .options "description"}}">{{end}}
-<link rel="stylesheet" href="/static/css/all.css" type="text/css" />
+<link rel="stylesheet" href="/assets/css/all.css" type="text/css" />
 </head>
 <body>
 {{/*    <nav id="nav">*/}}
@@ -22,6 +22,6 @@
 {{/*            Has been running {{index .options "runday"}} days.*/}}
 {{/*        {{end}}*/}}
 {{/*    </footer>*/}}
-    <script src="/static/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
