--- a/themes/default/res/css/base.css
+++ b/themes/default/res/css/base.css
@@ -35,20 +35,13 @@ ul,ol{padding: 0}
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-body.side {
-  position: fixed;
-  -webkit-transform: translate3D(250px,0,0);
-  -ms-transform: translate3D(250px,0,0);
-  transform: translate3D(250px,0,0);
-}
 
 #main {
   background-color: #fff;
-  /* padding-left: 290px;
-  padding-right: 40px; */
   max-width: 1390px;
   -webkit-overflow-scrolling: touch;
   margin: auto;
+  transition: width .2s;
 }
 h1.intro{
     padding: 20px 30px;
