--- a/themes/default/res/css/custom.css
+++ b/themes/default/res/css/custom.css
@@ -164,6 +164,11 @@ article h1.title {
 .archive-link {
     text-align: right;
 }
+@media screen and (max-width: 1500px) and (min-width:1024px) {
+    #main {
+        max-width: 80%;
+    }
+}
 @media screen and (max-width: 768px) {
     #nav {
         margin-bottom: 20px;
@@ -176,4 +181,3 @@ article h1.title {
         text-align: center;
     }
 }
-
