--- a/themes/firekylin/res/css/custom.css
+++ b/themes/firekylin/res/css/custom.css
@@ -164,6 +164,11 @@ article h1.title {
 .archive-link {
     text-align: right;
 }
+
+.index-post-time {
+    color: #CCC;
+}
+
 @media screen and (max-width: 1500px) and (min-width:1024px) {
     #main {
         max-width: 80%;
