eliminate redundancy css

--- a/themes/firekylin/layouts/base.html
+++ b/themes/firekylin/layouts/base.html
@@ -6,7 +6,8 @@
 {{if index .options "favicon_url"}}<link rel="icon" href="{{index .options "favicon_url"}}">{{end}}
 {{if index .options "keywords"}}<meta name="keywords" content="{{index .options "keywords"}}">{{end}}
 {{if index .options "description"}}<meta name="description" content="{{index .options "description"}}">{{end}}
-<link rel="stylesheet" href="/assets/css/all.css" type="text/css" />
+<link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
+<link rel="stylesheet" href="/assets/css/highlight.css" type="text/css" />
 </head>
 <body>
     <div id="main">
