--- a/themes/firekylin/includes/post.html
+++ b/themes/firekylin/includes/post.html
@@ -3,7 +3,7 @@
         <article class="post detail">
             <h1 class="title">{{.post.Title}}</h1>
             <div class="entry-content">{{.post.Content}}</div>
-            <p>本文链接：<a href="{{index .options "site_url"}}/post/{{.post.Pathname}}">{{index .options "site_url"}}/post/{{.post.Pathname}}.html</a></p>
+            <p class="post-url">本文链接：<a href="{{index .options "site_url"}}/post/{{.post.Pathname}}">{{index .options "site_url"}}/post/{{.post.Pathname}}.html</a></p>
             <p>-- <acronym title="End of File">EOF</acronym> --</p>
 
             <div class="post-info">
@@ -36,7 +36,9 @@
                         」标签
                     {{end}}
 
+                    {{if .post.UpdateTime.After .post.CreateTime}}
                     ，最后修改于<i>{{.post.UpdateTime.Format "2006-01-02 15:04:05"}}</i>
+                    {{end}}
                 </p>
 
                 {{ if .themeConfig.cc }}
