--- a/themes/firekylin/layouts/base.html
+++ b/themes/firekylin/layouts/base.html
@@ -2,10 +2,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-<title>{{.post.Title}}</title>
+<title>{{ or (index .options "title") .post.Pathname }}</title>
 {{if index .options "favicon_url"}}<link rel="icon" href="{{index .options "favicon_url"}}">{{end}}
 {{if index .options "keywords"}}<meta name="keywords" content="{{index .options "keywords"}}">{{end}}
 {{if index .options "description"}}<meta name="description" content="{{index .options "description"}}">{{end}}
+<meta name="og:title" content="{{or (index .options "title") .post.Pathname }}">
+<meta name="og:url" content="{{index .options "site_url"}}{{if .post.Pathname }}/post/{{.post.Pathname}}.html{{end}}">
+{{if index .options "favicon_url"}}<meta name="og:image" content="{{index .options "favicon_url"}}">{{end}}
+{{if index .options "description"}}<meta name="og:description" content="{{index .options "description"}}">{{end}}
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
 <link rel="stylesheet" href="/assets/css/highlight.css" type="text/css" />
 </head>
