--- a/themes/firekylin/includes/index.html
+++ b/themes/firekylin/includes/index.html
@@ -8,7 +8,7 @@
                 {{.Summary}}
 
                 <p class="more">
-                    <a href="/post/{{.Pathname}}.html">Read »</a>
+                    <a href="/post/{{.Pathname}}.html">»»»</a>
                 </p>
             </div>
         </article>
