--- a/themes/firekylin/includes/post.html
+++ b/themes/firekylin/includes/post.html
@@ -2,7 +2,8 @@
     <section id="page-post">
         <article class="post detail">
             <h1 class="title">{{.post.Title}}</h1>
-            <div class="entry-content">{{.post.Content}}</div>
+
+	    <div class="entry-content">{{.post.Content}}</div>
             <p class="post-url">本文链接：<a href="{{index .options "site_url"}}/post/{{.post.Pathname}}">{{index .options "site_url"}}/post/{{.post.Pathname}}.html</a></p>
             <p>-- <acronym title="End of File">EOF</acronym> --</p>
 
@@ -14,7 +15,7 @@
                             <code class="notebook">{{index .options "author"}}</code>
                         </a>
                     {{end}}
-                    发表于<i>{{.post.CreateTime.Format "2006-01-02 15:04:05"}}</i>
+                    发表于<i class="ctime">{{.post.CreateTime.Format "2006-01-02 15:04:05"}}</i>
 
                     {{if .post.Cates }}
                         ，添加在分类
@@ -44,6 +45,8 @@
                 {{ if .themeConfig.cc }}
                     <p>{{.themeConfig.cc}}</p>
                 {{end}}
+
+                <p>Copyright ©2015-2022 {{index .options "author"}}. All rights reserved.</p>
             </div>
         </article>
     </section>
