--- a/themes/firekylin/res/css/main.css
+++ b/themes/firekylin/res/css/main.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    color: #666;
+    color: #333;
     transition: transform .2s cubic-bezier(.4,.01,.165,.99);
-    font-family: "思源黑体",arial,sans-serif;
+    font-family: monospace;
     font-weight: 300;
 }
 
@@ -24,11 +24,13 @@ a,a:hover {
 
 img {
     max-width: 30vw;
+    max-height: 50vh;
+    border: 1px solid #333;
 }
 
 #main {
     background-color: #fff;
-    max-width: 1200px;
+    max-width: 900px;
     -webkit-overflow-scrolling: touch;
     margin: auto;
     transition: width .2s;
@@ -61,8 +63,6 @@ h1,h2,h3 {
 }
 
 article {
-    border-bottom: 1px solid #ddd;
-    border-top: 1px solid #fff;
     position: relative;
     padding: 30px 0;
     word-wrap: break-word;
@@ -125,6 +125,7 @@ article code, article .hljs {
     margin: 0 2px;
     padding: 4px 5px;
     background-color: #f2f2f2;
+    vertical-align: middle;
     border-radius: 5px;
 }
 
@@ -138,6 +139,10 @@ article .hljs ul {
 
 article .firekylin-code li:nth-child(2n) {
     background-color: #ECECEC;
+}
+
+article .firekylin-code {
+    width: 100%;
 }
 
 article code {
@@ -174,12 +179,12 @@ article p {
 }
 
 #page-index .post {
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .06), 0 3px 1px -2px rgba(0, 0, 0, .1), 0 1px 5px 0 rgba(0, 0, 0, .06);
-    padding: 0 20px;
+    box-shadow: 0 0px 0px 0 rgb(0 0 0 / 6%), 0 0px 1px 0px rgb(0 0 0 / 10%), 0 0px 5px 0 rgb(91 91 94 / 10%);
+    padding: 10px 20px;
     border: 0;
     overflow: hidden;
     margin-bottom: 30px;
-    padding-top: 10px;
+    border-radius: 6px;
 }
 
 .post.detail {
@@ -198,6 +203,10 @@ article p {
     display: none;
 }
 
+.more {
+    display: none;
+}
+
 @media screen and (max-width: 769px) {
     img {
         max-width: 100%;
@@ -208,7 +217,7 @@ article p {
 	margin: 0;
 	max-width: 100%;
     }
-
+    
     #main {
         width: 100%;
         min-height: 100%;
