--- a/themes/firekylin/layouts/base.html
+++ b/themes/firekylin/layouts/base.html
@@ -16,6 +16,6 @@
     <div id="main">
         {{template "content" .}}
     </div>
-    <script src="/assets/js/main.js"></script>
+    <!-- <script src="/assets/js/main.js"></script> -->
 </body>
 </html>
