--- a/themes/firekylin/includes/archive.html
+++ b/themes/firekylin/includes/archive.html
@@ -1,5 +1,8 @@
 {{define "content"}}
     <article class="post archive">
+        <div class="featured-image">
+            <img src="https://www.lilonghe.net/photography/2020-11-XiaMen/DSCF1177_Edit.JPG.thumbnail.jpg" loading="lazy">
+        </div>
         <div class="entry-content">
             {{range .datas }}
                 <h3>{{.Year}}-{{.Month}}</h3>
