--- a/themes/firekylin/res/css/main.css
+++ b/themes/firekylin/res/css/main.css
@@ -33,7 +33,7 @@ img {
 
 #main {
     background-color: #fff;
-    width: 900px;
+    width: 800px;
     max-width: 95%;
     margin: auto;
 
@@ -209,6 +209,27 @@ article p {
 
 .pagination, .post-url, .more {
     display: none;
+}
+
+.featured-image img {
+    width: 100%;
+    max-width: 100%;
+    max-height: 300px;
+    border-radius: 6px;
+    border: none;
+    object-fit: cover;
+}
+
+.featured-image-thump img {
+    object-fit: cover;
+    width: 100%;
+    max-width: 100%;
+    height: 200px;
+    display: block;
+    border: none;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    position: relative;
 }
 
 @media screen and (max-width: 769px) {
