--- a/themes/firekylin/includes/post.html
+++ b/themes/firekylin/includes/post.html
@@ -1,18 +1,18 @@
 {{define "content"}}
     <section id="page-post">
         <article class="post detail">
-        <h1 class="title">{{.post.Title}}</h1>
-        {{if index .post.PostOptions "featuredImage"}}
-            <div class="featured-image">
-                <img src="{{index .post.PostOptions "featuredImage"}}" loading="lazy">
-            </div>
-        {{end}}
-	    <div class="entry-content">{{.post.Content}}</div>
-            <p class="post-url">本文链接：<a href="{{index .options "site_url"}}/post/{{.post.Pathname}}">{{index .options "site_url"}}/post/{{.post.Pathname}}.html</a></p>
-            <p>-- <acronym title="End of File">EOF</acronym> --</p>
+            <h1 class="title">{{.post.Title}}</h1>
+            {{if index .post.PostOptions "featuredImage"}}
+                <div class="featured-image">
+                    <img src="{{index .post.PostOptions "featuredImage"}}" loading="lazy">
+                </div>
+            {{end}}
+            <div class="entry-content">{{.post.Content}}</div>
+                <p class="post-url">本文链接：<a href="{{index .options "site_url"}}/post/{{.post.Pathname}}">{{index .options "site_url"}}/post/{{.post.Pathname}}.html</a></p>
+                <p>-- <acronym title="End of File">EOF</acronym> --</p>
 
-            <div class="post-info">
-                <p>
+                <div class="post-info">
+                    <p>
                     {{if index .options "author"}}
                         作者
                         <a data-author="{{index .options "author"}}" href="{{index .options "authorlink"}}">
@@ -44,7 +44,7 @@
                     {{if gt (.post.UpdateTime.Sub .post.CreateTime).Milliseconds 86400000}}
                     ，最后修改于<i>{{.post.UpdateTime.Format "2006-01-02 15:04:05"}}</i>
                     {{end}}
-                </p>
+                    </p>
 
                 {{ if .themeConfig.cc }}
                     <p>{{.themeConfig.cc}}</p>
@@ -54,4 +54,19 @@
             </div>
         </article>
     </section>
+    <script>
+        let postTime = new Date({{.post.CreateTime}});
+        let diff = parseInt((new Date() - postTime) / 1000 / 60 / 60 / 24);
+        if (diff > 60) {
+            let tipNode = document.createElement("div");
+            tipNode.style.margin = "10px 0";
+            tipNode.style.fontSize = ".8em";
+            if (window.navigator.language === 'zh-CN') {
+                tipNode.innerText = "文章已发表 " + diff + " 天，内容可能已经过期。";
+            } else {
+                tipNode.innerText = "It has been " + diff + " days since the article was published, the article may have expired.";
+            }
+            document.querySelector('.post.detail').insertBefore(tipNode, document.querySelector('.entry-content'))
+        }
+    </script>
 {{end}}
