--- a/themes/firekylin/res/css/main.css
+++ b/themes/firekylin/res/css/main.css
@@ -42,15 +42,15 @@ img {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 32px;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 26px;
 }
 
 h3 {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 h1,h2,h3 {
@@ -64,9 +64,6 @@ article {
 
 article h1.title {
     color: #333;
-    font-size: 2em;
-    font-weight: 300;
-    line-height: 35px;
     margin-bottom: 15px;
     margin-top: 10px;
 }
@@ -99,7 +96,7 @@ article .entry-content .date {
     font-style: italic;
 }
 
-article .entry-content :where(p, blockquote, dl, table, iframe, h1, h2, h3, h4, h5, h6, p, pre) {
+article .entry-content :where(p, blockquote, dl, table, iframe, h1, h2, h3, h4, h5, h6, p, pre, hr) {
     margin-top: 15px;
 }
 
@@ -211,10 +208,14 @@ article p {
     display: none;
 }
 
+.featured-image {
+    margin-bottom: 15px;
+}
+
 .featured-image img {
     width: 100%;
     max-width: 100%;
-    max-height: 300px;
+    height: 300px;
     border-radius: 6px;
     border: none;
     object-fit: cover;
@@ -230,6 +231,74 @@ article p {
     border-radius: 6px;
     margin-bottom: 10px;
     position: relative;
+}
+
+.comment form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+.comment form > div {
+    width: 100%;
+}
+
+.comment input, .comment textarea {
+    outline: none;
+    border: 1px solid #DCDCDC;
+    padding: 6px 8px;
+    vertical-align: top;
+    color: inherit;
+    border-radius: 2px;
+    resize: none;
+    font-size: inherit;
+}
+
+.comment input:not(input[type=submit]), .comment textarea {
+    width: 100%;
+}
+
+.comment input:required, .comment textarea {
+    border-color: #ff7f506a;
+}
+
+.comment input[type=submit] {
+    background-color: #DCDCDC;
+    color: #333;
+    padding: 4px 6px;
+}
+
+.comment-additional {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
+}
+
+.comment-brand {
+    margin: 15px 0;
+    line-height: 1.6;
+}
+
+.comment-list {
+    margin-left: 1em;
+    margin-top: 20px;
+}
+
+.comment-list ul {
+    list-style: circle;
+}
+
+.message {
+    position: fixed;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #666;
+    color: #FFF;
+    box-shadow: 0 0 5px #ccc;
+    padding: 10px;
+    border-radius: 3px;
 }
 
 @media screen and (max-width: 769px) {
@@ -267,6 +336,9 @@ article p {
 @media screen and (max-width: 568px) {
     .toc {
         width: auto;
+    }
+    .comment form {
+        width: 80%;
     }
 }
 
