--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+img {
+    max-width: 100%;
+}
+
 .link {
     color: var(--primary-color);
+    text-decoration: none;
 }
