--- a/themes/firekylin/layouts/base.html
+++ b/themes/firekylin/layouts/base.html
@@ -13,9 +13,21 @@
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
 </head>
 <body>
+    <header class="header">
+        <div class="header-content">
+            <a href="/"><h1 class="title">{{index .options "title"}}</h1></a>
+            <nav>
+                <a href="/">首页</a>
+                <a href="/archives">归档</a>
+                <a href="/page/about.html">关于</a>
+            </nav>
+        </div>
+       
+    </header>
     <div id="main">
+        
         {{template "content" .}}
     </div>
-    <!-- <script src="/assets/js/main.js"></script> -->
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
