update comment system

--- a/themes/firekylin/includes/archive.html
+++ b/themes/firekylin/includes/archive.html
@@ -1,7 +1,7 @@
 {{define "content"}}
     <article class="post archive">
         <div class="featured-image">
-            <img src="https://www.lilonghe.net/photography/2020-11-XiaMen/DSCF1177_Edit.JPG.thumbnail.jpg" loading="lazy">
+            <img src="/static/upload/20220804/upload_3dc2b3441417f4ac543fed0b05e1c80d.png" loading="lazy">
         </div>
         <div class="entry-content">
             {{range .datas }}
