--- a/themes/firekylin/layouts/base.html
+++ b/themes/firekylin/layouts/base.html
@@ -19,6 +19,7 @@
             <nav>
                 <a href="/">首页</a>
                 <a href="/archives">归档</a>
+                <a target="_blank" href="https://www.lilonghe.net/photography/">摄影</a>
                 <a href="/page/about.html">关于</a>
             </nav>
         </div>
