--- a/themes/firekylin/includes/index.html
+++ b/themes/firekylin/includes/index.html
@@ -6,7 +6,7 @@
             <small class="index-post-time">{{.CreateTime.Format "2006-01-02 15:04:05"}}</small>
             {{if index .PostOptions "featuredImage"}}
             <div class="featured-image-thump">
-                <img src="{{index .PostOptions "featuredImage"}}" loading="lazy" />
+                <img src="/assets/img/img-placeholder.jpg" data-src="{{index .PostOptions "featuredImage"}}" />
             </div>
             {{end}}
             <div class="entry-content">
